tests/snapshots/integration__integration_tests__help__help_beta.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - beta
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----
wt beta - Experimental commands
Usage: wt beta [OPTIONS] <COMMAND>

Commands:
  select      Interactive worktree selector
  statusline  Single-line status for shell prompts

Options:
  -h, --help
          Print help

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

----- stderr -----
