tests/snapshots/integration__integration_tests__help__help_config.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_CONFIG_GLOBAL: ""
---
success: true
exit_code: 0
----- stdout -----
wt-config - Manage configuration. For AI commit setup, run: wt config --help 
(see 'LLM SETUP GUIDE').
Usage: wt config [OPTIONS] <COMMAND>

Options:
  -C <path>
      Change working directory

  -v, --verbose
      Show commands and debug info

  -h, --help
      Print help (see a summary with '-h')

LLM SETUP GUIDE:
Enable AI-generated commit messages

1. Install an LLM tool (llm, aichat)

   uv tool install -U llm

2. Configure a model

For Claude:
   llm install llm-anthropic
   llm keys set anthropic
   # Paste your API key from: https://console.anthropic.com/settings/keys
   llm models default claude-3.5-sonnet

For OpenAI:
   llm keys set openai
   # Paste your API key from: https://platform.openai.com/api-keys

3. Test it works

   llm "say hello"

4. Configure worktrunk

Add to ~/.config/worktrunk/config.toml:

   [commit-generation]
   command = "llm"

Use 'wt config init' to create the config file if it doesn't exist
Use 'wt config list' to view your current configuration
Docs: https://llm.datasette.io/ | https://github.com/sigoden/aichat

----- stderr -----
