tests/snapshots/integration__integration_tests__help__help_config_approvals_add.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - approvals
    - add
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----
wt config approvals add - Store approvals in config
Usage: wt config approvals add [OPTIONS]

Options:
  -f, --force
          Skip approval prompts

      --all
          Show all commands

  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

Prompts for approval of all project commands and saves them to user config.

By default, shows only unapproved commands. Use [2m--all[0m to review all commands
including previously approved ones. Use [2m--force[0m to approve without prompts.

----- stderr -----
