tests/snapshots/integration__integration_tests__help__help_config_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config - Manage configuration and shell integration
Usage: [1m[36mwt config[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36mshell[0m      Shell integration setup
  [1m[36mcreate[0m     Create user configuration file
  [1m[36mshow[0m       Show configuration files & locations
  [1m[36mcache[0m      Manage caches (CI status, default branch)
  [1m[36mvar[0m        Get or set runtime variables (stored in git config)
  [1m[36mapprovals[0m  Manage command approvals

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Manages configuration, shell integration, and runtime settings. The command provides subcommands for setup, inspection, and cache management.

[32mExamples[0m

Install shell integration (required for directory switching):

  [2mwt config shell install[0m

Create user config file with documented examples:

  [2mwt config create[0m

Show current configuration and file locations:

  [2mwt config show[0m

[32mShell integration[0m

Shell integration allows Worktrunk to change the shell's working directory after [2mwt switch[0m. Without it, commands run in a subprocess and directory changes don't persist.

The [2mwt config shell install[0m command adds integration to the shell's config file. Manual installation:

  [2m# For bash: add to ~/.bashrc[0m
  [2meval "$(wt config shell init bash)"[0m
  [2m[0m
  [2m# For zsh: add to ~/.zshrc[0m
  [2meval "$(wt config shell init zsh)"[0m
  [2m[0m
  [2m# For fish: add to ~/.config/fish/config.fish[0m
  [2mwt config shell init fish | source[0m

[32mConfiguration files[0m

[1mUser config[0m — [2m~/.config/worktrunk/config.toml[0m (or [2m$WORKTRUNK_CONFIG_PATH[0m):

Personal settings like LLM commit generation, path templates, and default behaviors. The [2mwt config create[0m command generates a file with documented examples.

[1mProject config[0m — [2m.config/wt.toml[0m in repository root:

Project-specific hooks: post-create, post-start, pre-commit, pre-merge, post-merge. See Hooks for details.

[32mCommand approvals[0m

Project hooks require approval on first run. Manage saved approvals with:

  [2mwt config approvals list           # Show all approved commands[0m
  [2mwt config approvals clear <repo>   # Remove approvals for a repository[0m

See Hooks for how approvals work.

[32mLLM commit messages[0m

Worktrunk can generate commit messages using an LLM. Enable in user config:

  [2m[commit-generation][0m
  [2mcommand = "llm"[0m

See LLM Commits for installation, provider setup, and customization.
