tests/snapshots/integration__integration_tests__help__help_config_state_default_branch.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - default-branch
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state default-branch - Default branch setting

Usage: [1m[36mwt config state default-branch[0m [36m[OPTIONS][0m [36m[COMMAND]

[1m[32mCommands:
  [1m[36mget[0m    Get the default branch
  [1m[36mset[0m    Set the default branch
  [1m[36mclear[0m  Clear the default branch cache

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Useful in scripts to avoid hardcoding [2mmain[0m or [2mmaster[0m:

  [2mgit rebase $(wt config state default-branch)

Without a subcommand, runs [2mget[0m. Use [2mset[0m to override, [2mget --refresh[0m to re-detect, or [2mclear[0m to reset.

[32mDetection

Worktrunk detects the default branch automatically:

1. [1mWorktrunk cache[0m — Checks [2mgit config worktrunk.default-branch[0m (single command)
2. [1mGit cache[0m — Detects primary remote and checks its HEAD (e.g., [2morigin/HEAD[0m)
3. [1mRemote query[0m — If not cached, queries [2mgit ls-remote[0m (100ms–2s)
4. [1mLocal inference[0m — If no remote, infers from local branches

Once detected, the result is cached in [2mworktrunk.default-branch[0m for fast access.

The local inference fallback uses these heuristics in order:
- If only one local branch exists, uses it
- For bare repos or empty repos, checks [2msymbolic-ref HEAD
- Checks [2mgit config init.defaultBranch
- Looks for common names: main, master, develop, trunk
