tests/snapshots/integration__integration_tests__help__help_hook_approvals.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - hook
    - approvals
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt hook approvals - Manage command approvals

Usage: [1m[36mwt hook approvals[0m [36m[OPTIONS][0m [36m<COMMAND>

[1m[32mCommands:
  [1m[36madd[0m    Store approvals in config
  [1m[36mclear[0m  Clear approved commands from config

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Project hooks require approval on first run to prevent untrusted projects from running arbitrary commands.

[32mExamples

Pre-approve all commands for current project:
  [2mwt hook approvals add

Clear approvals for current project:
  [2mwt hook approvals clear

Clear global approvals:
  [2mwt hook approvals clear --global

[32mHow approvals work

Approved commands are saved to user config. Re-approval is required when the command template changes or the project moves. Use [2m--yes[0m to bypass 
prompts in CI.
